--- a/wpApp/scss/ionic.app.scss
+++ b/wpApp/scss/ionic.app.scss
@@ -3,17 +3,8 @@ To customize the look and feel of Ionic, you can override the variables
 in ionic's _variables.scss file.
 
 For example, you might change some of the default colors:
-
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
-$energized:                       #ffc900 !default;
-$assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
-$dark:                            #444 !default;
 */
+@import "scss/variables";
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -41,4 +32,25 @@ body {
       display: block !important;
     }
   }
+}
+
+img {
+	max-width: 100%;
+}
+
+.schedule {
+}
+.schedule-content {
+	background: $positive center fixed;
+    background-size: cover;
+}
+
+.card, .list-inset, .item {
+    border-radius: 0;
+    background-color: rgba(#000, 0.3) !important;
+	color: #fff;
+
+	> * {
+		color: #fff;
+	}
 }
