--- a/wpApp/scss/_variables.scss
+++ b/wpApp/scss/_variables.scss
@@ -7,11 +7,11 @@ $light:                           #fff;
 $stable:                          #ddd;
 $positive:                        #387ef5;
 $calm:                            #11c1f3;
-$balanced:                        #33cd5f;
+$balanced:                        #49d07f;
 $energized:                       #ffc900;
 $assertive:                       #ef473a;
 $royal:                           #886aea;
-$dark:                            #444;
+$dark:                            #112;
 
 
 // Base
