--- a/wpApp/scss/ionic.app.scss
+++ b/wpApp/scss/ionic.app.scss
@@ -41,6 +41,6 @@ img {
 .schedule {
 }
 .schedule-content {
-	background: $positive center fixed;
+	background: #bbb center fixed;
     background-size: cover;
 }
